--- a/tools/cfgs/dataset_configs/waymo_dataset.yaml
+++ b/tools/cfgs/dataset_configs/waymo_dataset.yaml
@@ -26,7 +26,8 @@ DATA_AUGMENTOR:
         - NAME: gt_sampling
           USE_ROAD_PLANE: False
           DB_INFO_PATH:
-              - waymo_processed_data_v0_5_0_waymo_dbinfos_train_sampled_1_global.pkl
+              - waymo_processed_data_v0_5_0_waymo_dbinfos_train_sampled_1.pkl
+              # - waymo_processed_data_v0_5_0_waymo_dbinfos_train_sampled_1_global.pkl
 
           USE_SHARED_MEMORY: True  # set it to True to speed up (it costs about 15GB shared memory)
           DB_DATA_PATH:
